--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: simple_dio
-description: A simple package with dio.
+name: simple_http_client
+description: A simple http client package with dio.
 version: 0.0.1
 author: Febu D. Haryanto
 homepage:
