--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simple_http_client
 description: A simple http client package with dio.
-version: 1.0.0
+version: 0.0.1
 author: Febu D. Haryanto
 homepage:
 
@@ -14,6 +14,8 @@ dependencies:
 
   dio: ^5.3.3 
   fluttertoast: ^8.2.2 
+  flutter_spinkit: ^5.1.0 
+
 
 
 dev_dependencies:
